fix bug for contacts form and adjust radio button logic for type of trainings

--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -120,10 +120,10 @@
     <nz-form-control>
       <nz-radio-group class="custom-radio-group"
                       formControlName="option">
-        <label nz-radio [nzValue]="'Group training'">
+        <label nz-radio [nzValue]="'MAIN.RESERVATIONS.FORM.GROUP_TRAINING' | translate">
           {{ 'MAIN.RESERVATIONS.FORM.GROUP_TRAINING' | translate }}
         </label>
-        <label nz-radio [nzValue]="'Individual training'">
+        <label nz-radio [nzValue]="'MAIN.RESERVATIONS.FORM.INDIVIDUAL_TRAINING' | translate">
           {{ 'MAIN.RESERVATIONS.FORM.INDIVIDUAL_TRAINING' | translate }}
         </label>
       </nz-radio-group>
