adjust form lable font-size and adjust font-weight for heading in contacts

--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
@@ -1,4 +1,4 @@
-<h4 class="contacts_container__heading section-title">{{ 'MAIN.CONTACTS.TITLE' | translate }}</h4>
+<h4 class="section-title">{{ 'MAIN.CONTACTS.TITLE' | translate }}</h4>
 <div class="contacts_container">
   <div class="contacts-time_wrapper page-section">
     <ul class="contacts_container__list page-section">
@@ -30,7 +30,7 @@
           </tr>
           <tr>
             <td>{{ 'MAIN.SHARED.SCHEDULE.DAYS.SAT_SUN' | translate }}</td>
-            <td>10:00 - 16:00</td>
+            <td>09:00 - 16:00</td>
           </tr>
           </tbody>
         </table>
