--- a/src/assets/modules/_colors.scss
+++ b/src/assets/modules/_colors.scss
@@ -1,4 +1,6 @@
 $mainRoseAsh: #F8B4B1;
 $mainTurquoise: #87eadc;
 $mainBgColor: #f1e9e9;
+$mainTextColor: #424B54;
+$secondaryBgColor: #E2CBF0;
 $deytonaGreyMetalic: #515555;
