--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -3,12 +3,12 @@
 @import '../../../../../assets/modules/generic-content-container';
 
 .section-title{
-  color: grey;
+  color: $mainTextColor;
   padding: 0 20px;
 }
 
 .section-description {
-  color: grey;
+  color: $mainTextColor;
   text-align: center;
   font-size: 1.25rem;
   margin-bottom: 2.5rem;
