--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -5,9 +5,8 @@
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
-      <p class="intro-hero__paragraph">{{ 'MAIN.HOME.PARAGRAPH.PART_1' | translate }}
-        {{ 'MAIN.HOME.PARAGRAPH.PART_2' | translate }}</p>
-      <a class="btn" (click)="navigateToContacts()">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
+      <p class="intro-hero__paragraph">{{ 'MAIN.HOME.PARAGRAPH.PART_1' | translate }}</p>
+      <a class="btn" (click)="navigateToReservations()">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
     </div>
   </div>
   <div class="middle-hero page-section">
