--- a/src/app/components/app-main-section/components/news-page-section/news-page-section.component.scss
+++ b/src/app/components/app-main-section/components/news-page-section/news-page-section.component.scss
@@ -4,7 +4,7 @@
 @import '../../../../../assets/modules/generic-content-container';
 
 .section-title {
-  color: grey;
+  color: $mainTextColor;
 }
 
 .news-section {
@@ -50,6 +50,6 @@
 }
 
 .news-date {
-  color: #888;
+  color: $mainTextColor;
   font-size: 14px;
 }
