--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -9,7 +9,7 @@
 }
 
 ::ng-deep .ant-form-item-label label {
-  color: grey;
+  color: $mainTextColor;
   font-size: 1rem;
 }
 
@@ -24,14 +24,14 @@
 }
 
 .section-title {
-  color: grey;
+  color: $mainTextColor;
   font-weight: 500;
 }
 
 .form_header {
   text-align: center;
   font-size: 1.5rem;
-  color: grey;
+  color: $mainTextColor;
 
   @include atMedium {
     font-size: 2rem;
@@ -45,7 +45,7 @@
   flex-direction: column;
   gap: 1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  color: grey;
+  color: $mainTextColor;
 
   @include atMedium {
     box-shadow: 20px 20px 12px rgba(0, 0, 0, 0.2), 0 1px 3px rgba(0, 0, 0, 0.1);
