--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -5,6 +5,12 @@
 @import '../../../../../assets/modules/generic-content-container';
 @import '../../../../../assets/modules/quote';
 
+
+.section-title {
+  color: $mainTextColor;
+  margin: 0
+}
+
 .main-section {
   margin-top: -100px;
 }
@@ -21,7 +27,7 @@
   border-bottom: 10px solid $mainRoseAsh;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 700px;
   overflow: hidden;
 
   img {
@@ -29,11 +35,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 700px;
     object-fit: cover;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     z-index: 0;
+
+    @include atMedium {
+      height: 100%;
+    }
   }
 
   img.active {
@@ -45,31 +55,37 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 700px;
     background-color: rgba(255, 255, 255, 0.4);
     z-index: 1;
+
+    @include atMedium {
+      height: 100%;
+    }
   }
 
   &__text-content {
     position: absolute;
-    top: 45%;
-    left: 8%;
+    top: 25%;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.85);
     padding: 20px;
     width: 85%;
-    transform: translateY(-50%);
+    transform: translate(9%);
     text-align: center;
     z-index: 10;
 
 
     @include atMedium {
-      width: 70%;
-      left: 15.5%;
+      width: 60%;
+      top: 20%;
+      left: 0;
+      transform: translateX(35%);
     }
 
     @include mobileView {
-      top:60%;
+      top: 24%;
+      left: 0;
     }
   }
 
@@ -80,7 +96,7 @@
     font-size: 2.5rem;
 
     @include atSmall {
-      font-size: 3.1rem;
+      font-size: 3rem;
     }
 
     @include atMedium {
@@ -89,6 +105,10 @@
 
     @include atLarge {
       font-size: 7rem;
+    }
+
+    @include mobileView {
+      font-size: 4rem;
     }
   }
 
@@ -103,12 +123,16 @@
     }
 
     @include atMedium {
-      font-size: 3.4rem;
+      font-size: 3.3rem;
       margin: 0;
     }
 
     @include atLarge {
       font-size: 4rem;
+    }
+
+    @include mobileView {
+      font-size: 2.5rem;
     }
   }
 
@@ -141,16 +165,29 @@
       max-width: 360px;
       margin-bottom: 30px;
     }
+
+    @include mobileView {
+      font-size: 1.2rem;
+    }
+  }
+
+  @include atMedium {
+    height: 100vh;
   }
 }
 
 .middle-hero {
+  background-color: $secondaryBgColor;
 
   &__img {
     display: block;
     border-radius: 20px;
-    margin: 50px auto 0 auto;
-    opacity: 50%;
+    width: 90%;
+    opacity: 90%;
+
+    @include atMedium {
+      width: 50%;
+    }
   }
 
   &__text-content {
@@ -165,12 +202,7 @@
     color: $mainTextColor;
     font-weight: 300;
     font-size: 2rem;
-
-    @include atSmall {
-      margin: 0;
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
+    padding-top: 50px;
 
     @include atMedium {
       font-size: 3rem;
@@ -210,12 +242,29 @@
 
   .btn_about-us {
     margin-top: 10px;
+    margin-bottom: 25px;
   }
 }
 
-.section-title {
-  color: $mainTextColor;
-  margin: 0
+.about-us_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__description {
+    text-align: left;
+    font-size: 1.2rem;
+    padding: 0 30px;
+
+    @include atMedium {
+      font-size: 1.6rem;
+    }
+  }
+
+  @include  atMedium {
+    flex-direction: row;
+    align-items: normal;
+  }
 }
 
 .faq_heading {
