adjust bolding for section title headings for all components

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -7,9 +7,7 @@
 
 
 .section-title {
-  color: $mainTextColor;
   margin: 0;
-  font-weight: bold;
 }
 
 .main-section {
@@ -392,7 +390,7 @@
 }
 
 .testimonials-heading {
-  margin: 25px 0 50px
+  margin: 25px 0 50px;
 }
 
 .testimonials-container {
