--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -25,7 +25,6 @@
 
 .section-title {
   color: $mainTextColor;
-  font-weight: 500;
 }
 
 .form_header {
@@ -110,3 +109,34 @@ select {
   margin-right: 8px;
 }
 
+.table_title {
+  font-size: 1.9rem;
+  text-align: center;
+  font-weight: bold;
+  color: $mainTextColor;
+  margin-bottom: 0;
+}
+
+.time-table {
+  width: 100%;
+  max-width: 750px;
+  margin: 20px auto 50px auto;
+  border-collapse: collapse;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  font-family: sans-serif;
+  background-color: $mainBgColor;
+}
+
+.time-table th,
+.time-table td {
+  padding: 12px 16px;
+  border: 1px solid #ddd;
+  text-align: left;
+  font-size: 1rem;
+  color: $mainTextColor;
+}
+
+.time-table th {
+  background-color: #f7f7f7;
+  font-weight: 600;
+}
