--- a/src/assets/modules/_colors.scss
+++ b/src/assets/modules/_colors.scss
@@ -2,6 +2,7 @@ $mainRoseAsh: #F8B4B1;
 $mainTurquoise: #87eadc;
 $mainBgColor: #f1e9e9;
 $mainTextColor: #424B54;
-$secondaryBgColor: #f3e9fa;
+$secondaryBgColor: #ecdafa;
+$secondaryBgColor2: #f3e9fa;
 $backUpSecondaryBgColor: #E2CBF0;
 $deytonaGreyMetalic: #515555;
