--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -6,7 +6,7 @@
     <p class="quote-author">— {{ 'MAIN.PRICES.JOSEPH_PILATES' | translate }}</p>
   </div>
   <div class="price-list-section">
-    <h2 class="section-title">{{ 'MAIN.PRICES.GROUP_TRAININGS' | translate }}</h2>
+    <h2 class="type-training-heading section-title">{{ 'MAIN.PRICES.GROUP_TRAININGS' | translate }}</h2>
     <div class="price-list">
       <div class="price-item header">
         <div class="service">{{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
@@ -52,7 +52,7 @@
        class="btn btn_spacing">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
   </div>
   <div class="price-list-section">
-    <h2 class="individual-heading section-title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h2>
+    <h2 class="type-training-heading section-title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h2>
     <div class="price-list">
       <div class="price-item header">
         <div class="service">{{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</div>
