--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
@@ -35,7 +35,8 @@
   width: 2rem;
   height: 2rem;
   list-style: none;
-  margin-right: 0.3125rem;
+  flex-shrink: 0;
+  margin-right: 1rem;
 }
 
 .contacts-time_wrapper {
