remove about us part form the footer and make it 3 part section

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,9 +1,9 @@
 <div class="footer">
-  <div class="footer_section">
-    <div class="about-us_container">
-      <h4 class="about-us_container__heading">{{ 'MAIN.FOOTER.ABOUT_US' | translate }}</h4>
-      <p class="about-us_container__description">{{ 'MAIN.FOOTER.ABOUT_US_DESCRIPTION' | translate }}</p>
-    </div>
+  <div class="footer_section page-section">
+<!--    <div class="about-us_container">-->
+<!--      <h4 class="about-us_container__heading">{{ 'MAIN.FOOTER.ABOUT_US' | translate }}</h4>-->
+<!--      <p class="about-us_container__description">{{ 'MAIN.FOOTER.ABOUT_US_DESCRIPTION' | translate }}</p>-->
+<!--    </div>-->
     <div class="social-media_container">
       <h4 class="social-media_container__heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
       <ul class="social-media_container__list">
