adjust reservation link text and intro hero subtitle font size

--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
@@ -11,5 +11,5 @@
     </div>
   </div>
   <a routerLink="/reservations"
-     class="btn btn_spacing">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
+     class="btn btn_spacing">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
 </section>
