--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
@@ -11,7 +11,7 @@
       alt="Gallery image"
     />
   </div>
-  <a class="btn btn_gallery" routerLink="/reservations">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
+  <a class="btn btn_gallery" routerLink="/reservations">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
 </div>
 
 
