--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -111,7 +111,7 @@
   }
 
   &__subtitle {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     color: $mainTextColor;
     margin-top: 0;
     margin-bottom: 1.2rem;
@@ -136,7 +136,7 @@
 
   &__paragraph {
     color: $mainTextColor;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 100;
 
     @include atSmall {
@@ -182,6 +182,8 @@
     display: block;
     border-radius: 20px;
     width: 90%;
+    object-fit: cover;
+
 
     @include atMedium {
       width: 50%;
@@ -252,6 +254,7 @@
     display: block;
     border-radius: 20px;
     width: 90%;
+    object-fit: cover;
 
     @include atMedium {
       width: 50%;
@@ -339,6 +342,7 @@
     @include atMedium {
       font-size: 1.6rem;
       padding: 0 30px;
+      margin-top: 0;
     }
   }
 
