--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
     <a routerLink="/reservations"
-       class="btn btn_spacing">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
+       class="btn btn_spacing">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
   </div>
   <div class="price-list-section">
     <h2 class="type-training-heading section-title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h2>
@@ -95,6 +95,6 @@
       </div>
     </div>
     <a routerLink="/reservations"
-       class="btn btn_spacing">{{ 'MAIN.SHARED.NAVIGATION_LINKS.BOOK_A_RESERVATION' | translate }}</a>
+       class="btn btn_spacing">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
   </div>
 </section>
