--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
@@ -11,5 +11,6 @@
     </div>
   </div>
   <a routerLink="/reservations"
-     class="btn btn_spacing">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
+     class="btn btn_spacing">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' +
+  '' | translate }}</a>
 </section>
