adjust tos section font size and text in reservations for the time

--- a/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.scss
+++ b/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.scss
@@ -1,8 +1,9 @@
 @import '../../../../../assets/base/global';
+@import '../../../../../assets/modules/colors';
 
 .terms_container{
   width: 80%;
-  color: grey;
+  color: $mainTextColor;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
