adjust intro hero for small devices and time table for working hours

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -172,6 +172,14 @@
   @include atMedium {
     height: 100vh;
   }
+
+  .btn {
+    margin-bottom: 10px;
+
+    @include atMedium {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .middle-hero {
