--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -113,7 +113,8 @@
         {{ 'MAIN.RESERVATIONS.FORM.ERRORS.TIME' | translate }}
       </nz-form-explain>
       <nz-form-explain *ngIf="userForm.get('reservationTime')?.hasError('notRoundHour')" class="error">
-        Please select a full hour (e.g., 13:00).</nz-form-explain>
+        Please select a full hour (e.g., 13:00).
+      </nz-form-explain>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
@@ -160,22 +161,26 @@
     <button class="modal-close" (click)="showModal = false">{{ 'MAIN.SHARED.ERRORS.MODAL.BUTTON' | translate }}</button>
   </div>
 </div>
-<h3 class="table_title">{{ 'MAIN.SHARED.SCHEDULE.TITLE' | translate }}</h3>
-<table class="time-table">
-<thead>
-<tr>
-  <th>{{ 'MAIN.SHARED.SCHEDULE.DAYS.TITLE' |translate }}</th>
-  <th>{{ 'MAIN.SHARED.SCHEDULE.DAYS.TIME' | translate }}</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-  <td>{{ 'MAIN.SHARED.SCHEDULE.DAYS.MONDAY_FRI' | translate }}</td>
-  <td>08:00 - 19:00</td>
-</tr>
-<tr>
-  <td>{{ 'MAIN.SHARED.SCHEDULE.DAYS.SAT_SUN' | translate }}</td>
-  <td>09:00 - 16:00</td>
-</tr>
-</tbody>
-</table>
+<div class="table_wrapper">
+  <h3 class="table_title">{{ 'MAIN.SHARED.SCHEDULE.TITLE' | translate }}</h3>
+  <div class="time-table-wrapper">
+    <table class="time-table">
+      <thead>
+      <tr>
+        <th>{{ 'MAIN.SHARED.SCHEDULE.DAYS.TITLE' |translate }}</th>
+        <th>{{ 'MAIN.SHARED.SCHEDULE.DAYS.TIME' | translate }}</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>{{ 'MAIN.SHARED.SCHEDULE.DAYS.MONDAY_FRI' | translate }}</td>
+        <td>08:00 - 19:00</td>
+      </tr>
+      <tr>
+        <td>{{ 'MAIN.SHARED.SCHEDULE.DAYS.SAT_SUN' | translate }}</td>
+        <td>09:00 - 16:00</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
