--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -125,12 +125,16 @@ select {
 
 .time-table {
   width: 100%;
-  max-width: 750px;
+  max-width: 600px;
   margin: 20px auto 50px auto;
   border-collapse: collapse;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   font-family: sans-serif;
   background-color: $mainBgColor;
+
+  @include atMedium {
+    max-width: 750px;
+  }
 }
 
 .time-table th,
