adjust font-size for gdpr and tos

--- a/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.scss
+++ b/src/app/components/app-main-section/components/terms-of-use/terms-of-use.component.scss
@@ -8,13 +8,21 @@
   margin-right: auto;
   margin-bottom: 50px;
   margin-top:50px;
+  font-size: 1.2rem;
 
   h1, h2 {
     text-align: center;
   }
 
+
   h2 {
     margin-bottom: 50px;
+    font-size: 1.2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    margin-bottom: 0;
   }
 
   a {
