--- a/src/app/components/app-main-section/components/gdpr/gdpr.component.scss
+++ b/src/app/components/app-main-section/components/gdpr/gdpr.component.scss
@@ -7,6 +7,7 @@
   margin-right: auto;
   margin-bottom: 50px;
   margin-top:50px;
+  font-size: 1.2rem;
 
   h1, h2 {
     text-align: center;
@@ -14,6 +15,11 @@
 
   h2 {
     margin-bottom: 50px;
+  }
+
+  ul {
+    padding-left: 0;
+    margin-top: 15px;
   }
 
   li {
