adjust font size for paragraph in intro hero

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -30,7 +30,8 @@
       <div class="hero_wrapper page-section">
         <img class="middle-hero__img" src="./assets/images/gallery/IMG_0115.jpeg" alt="main-section stretch image"
              loading="lazy">
-        <p class="hero_wrapper__description last-hero_description">{{'MAIN.HOME.LAST_HERO_DESCRIPTION' | translate}}</p>
+        <p
+          class="hero_wrapper__description last-hero_description">{{ 'MAIN.HOME.LAST_HERO_DESCRIPTION' | translate }}</p>
       </div>
       <a routerLink="/news/1"
          class="btn btn_news">{{ 'MAIN.SHARED.NAVIGATION_LINKS.LEARN_MORE' | translate }}</a>
