--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -6,7 +6,7 @@
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
-      <p class="intro-hero__paragraph"><i>{{ 'MAIN.HOME.PARAGRAPH' | translate }}</i></p>
+      <p class="intro-hero__paragraph">{{ 'MAIN.HOME.PARAGRAPH' | translate }}</p>
       <a class="btn" (click)="navigateToReservations()">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
     </div>
   </div>
@@ -37,10 +37,6 @@
          class="btn btn_news">{{ 'MAIN.SHARED.NAVIGATION_LINKS.LEARN_MORE' | translate }}</a>
     </div>
   </div>
-  <!--  <div class="quote-container">-->
-  <!--    <p class="quote-text">“{{ 'MAIN.HOME.PILATES_QUOTE' | translate }}”</p>-->
-  <!--    <p class="quote-author">— {{ 'MAIN.HOME.JOSEPH_PILATES' | translate }}</p>-->
-  <!--  </div>-->
   <h3 class="testimonials-heading section-title">{{ 'MAIN.HOME.TESTIMONIALS_TITLE' | translate }}</h3>
   <div class="testimonials-container">
     <div class="testimonial-card" *ngFor="let t of testimonials">
