--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -6,7 +6,7 @@
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
-      <p class="intro-hero__paragraph"><i>{{ 'MAIN.HOME.PARAGRAPH' | translate }}</i></p>
+      <p class="intro-hero__paragraph">{{ 'MAIN.HOME.PARAGRAPH' | translate }}</p>
       <a class="btn" (click)="navigateToReservations()">{{ 'MAIN.HEADER.NAV.RESERVATIONS_LINK' | translate }}</a>
     </div>
   </div>
