--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.html
@@ -5,7 +5,7 @@
     <img
       *ngFor="let img of images; let i = index"
       [src]="img"
-      loading="lazy"
+      rel="preload"
       (click)="openModal(i)"
       class="thumbnail"
       alt="Gallery image"
