--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -2,7 +2,7 @@
   <!-- Section 1 -->
   <div class="intro-hero">
     <div class="image-overlay"></div>
-    <img *ngFor="let img of imgs; let i = index" [src]='img' [class.active]="i === currentIndex" loading="lazy">
+    <img *ngFor="let img of imgs; let i = index" [src]='img' [class.active]="i === currentIndex" rel="preload">
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
