--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -2,6 +2,10 @@
 @import '../../../../../assets/modules/section-title';
 @import '../../../../../assets/modules/generic-content-container';
 
+.preload-width {
+  height: 100vh;
+}
+
 .section-title{
   color: $mainTextColor;
   padding: 0 20px;
