--- a/src/app/components/app-main-section/components/news-page-section/news-page-section.component.scss
+++ b/src/app/components/app-main-section/components/news-page-section/news-page-section.component.scss
@@ -3,6 +3,10 @@
 @import '../../../../../assets/modules/section-title';
 @import '../../../../../assets/modules/generic-content-container';
 
+.preload-width {
+  height: 100vh;
+}
+
 .section-title {
   color: $mainTextColor;
 }
