--- a/src/app/components/app-main-section/components/news-page-section/news-page-section.component.html
+++ b/src/app/components/app-main-section/components/news-page-section/news-page-section.component.html
@@ -1,6 +1,7 @@
 <div class="news-section">
   <h2 class="news-section__heading section-title">{{'MAIN.NEWS.TITLE' | translate}}</h2>
-  <div class="news-container">
+  <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+  <div class="news-container" *ngIf="imagesLoaded" [ngClass]="{ 'preload-width': !imagesLoaded }">
     <div class="news-card" *ngFor="let news of newsList" (click)="openNewsInformation(news.id)">
       <img [src]="news.image" [alt]="news.title" class="news-image">
       <div class="news-content">
