--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
@@ -1,7 +1,8 @@
 <section class="about-us_section">
   <h1 class="section-title about-us_heading">{{ 'MAIN.ABOUT_US.MAIN-TITLE' | translate }}</h1>
   <h2 class="about-us_trainers-heading">{{ 'MAIN.ABOUT_US.TITLE' | translate }}</h2>
-  <div class="about-us_container">
+  <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+  <div class="about-us_container" *ngIf="imagesLoaded" [ngClass]="{ 'preload-width': !imagesLoaded }">
     <div class="instructor-card" *ngFor="let card of aboutUsCardsList">
       <img [src]="card.image" [alt]="card.title" class="instructor-image" rel="preload">
       <div class="about-us_description">
