--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
@@ -1,6 +1,10 @@
 @import '../../../../../assets/base/global';
 @import '../../../../../assets/modules/section-title';
 
+.preload-width {
+  height: 100vh;
+}
+
 h1 {
   font-size: 2rem;
   font-weight: bold;
